retired/hyrax_tests/errors/bes_not_found_error.dds
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.dds?error(5)
-s
